Fixed aside flex alignment

--- a/style.css
+++ b/style.css
@@ -202,6 +202,7 @@ footer {
 .sidebar-box {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     padding-bottom: var(--gap-small);
 }
 
@@ -285,7 +286,7 @@ footer {
     .flex {
         display: flex;
         justify-content: space-between;
-        align-items: center;
+        /* align-items: center; */
         gap: 4em;
     }
     .title {
